# json

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: build.yaml
docs/: json.hpp.md  serder.hpp.md
include/json/: json.hpp  serdes.hpp
src/: json.cpp  mstch-json.cpp  string_reader.cpp
tests/: cast.cc  from_json.cc  json.hh  json_tests.hh  mstch-json.hh  n_structure_100000_opening_arrays.inc  n_structure_open_array_object.inc  read.cc  std_capture.cc  std_capture.hh  write.cc
vs/: u8string.natvis
